tests/sksl/errors/Ossfuzz27650.glsl
### Compilation failed:

error: 1: expected 'int', but found 'float'
error: 1: unknown identifier 'i'
2 errors
